grml-etc-core (0.3.54) unstable; urgency=low

  * zshrc: Adding support for cvs repositories to vcs_info()
  * zshrc: Add an experimental bzr backend, that works without calling
    bzr itself; it is disabled by default.
  * zshrc: Fix in svn backend of vcs_info(), doc updates and a new
    style to configure the %b replacement in formats for svn and bzr
  * zshrc: Actually tried svk myself; including vcs_info() fixes from
    that test.

 -- Frank Terbeck <ft@grml.org>  Sun, 31 Aug 2008 21:35:42 +0200

grml-etc-core (0.3.53) unstable; urgency=low

  [ Frank Terbeck ]
  * zshrc: Handle a state of git in vcs_info(), when a normal
    rebase conflicts
  * zshrc: Make vcs_info() detect $GIT_DIR/svn and set the name of the
    vcs to 'git-svn'
  * zshrc: Handle .hg subdirectories, that are not the .hg subdirectory
    of a mercurial repository. Found by Karl Voit.
  * zshrc: Give the user the opportunity to switch the vcs_info prompt
    off for certain version control systems.
  * zshrc: Adding support for darcs repositories to vcs_info()
  * zshrc: Adding support for monotone repositories to vcs_info()

 -- Michael Prokop <mika@grml.org>  Sat, 30 Aug 2008 00:52:14 +0200

grml-etc-core (0.3.52) unstable; urgency=low

  * zshrc: Add version control information to our prompt.

 -- Frank Terbeck <ft@grml.org>  Tue, 26 Aug 2008 16:36:44 +0200

grml-etc-core (0.3.51) unstable; urgency=low

  The "pfuh what nice zsh features" release. :)

  [ Frank Terbeck ]
  * zshrc: Add persistent dirstack support for shells older than 4.2.0
  * zshrc: Make ',.' abbreviation optional [Closes: issue445]
  * zshrc: do not use xunfunction() anymore; it prevented things like
           'source ~/.zshrc' from working.

  [ Michael Gebetsroither ]
  * zshrc: add runit sysv emulation support to Start/Stop/Restart/...

  [ Michael Prokop ]
  * zshrc:
    - Add support for ${HOME}/.zshenv.
    - Add new function ansi-colors() [via harnir]
    - Support .deb in show-archive() [via harnir]