@@ -3,7 +3,7 @@ Section: grml
 Priority: optional
 Maintainer: Michael Prokop <mika@grml.org>
 Build-Depends: debhelper (>= 4.0.0)
-Standards-Version: 3.7.2
+Standards-Version: 3.8.0
 Homepage: http://hg.grml.org/grml-etc-core/
 XS-Vcs-hg: http://hg.grml.org/grml-etc-core/
 XS-Vcs-Browser: http://hg.grml.org/grml-etc-core/
